--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -36,3 +36,18 @@ jobs:
           context: .
           push: true
           tags: ${{ steps.meta.outputs.tags }}
+
+      - name: Deploy to server
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.AWS_HOST }} # Địa chỉ của server
+          username: ${{ secrets.AWS_USERNAME }} # Username để login vào server
+          key: ${{ secrets.AWS_SSH_KEY }} # Private key để login vào server
+
+          script: |
+#           Pull image về lại server
+            docker pull ${{ steps.meta.outputs.tags }}
+#           Xóa container cũ nếu có
+            docker rm -f minhnguyet_frontend &>/dev/null
+#           Chạy container mới
+            docker run -it -d --name minhnguyet_frontend -p 3000:3000 ${{ steps.meta.outputs.tags }}
